--- a/app/views/bookings/user_bookings.html.erb
+++ b/app/views/bookings/user_bookings.html.erb
@@ -64,10 +64,26 @@
 
 
 <div>
-<h1>Calendar</h1>
+<div class = "bookingcontainer px-5">
+<h1>Future Projects</h1>
+<br>
+<% @profile_bookings.each do |book| %>
+<div class = "card my-3 p-5">
+<div class = "showing_booking_details d-flex justify-content-around align-items-center">
+<div class= "showing_dates align-item w-50">
+  <h2> <%= "You haven't booked anyone yet :c" if @profile_bookings.empty? %></h2>
+  <h3>You will work with: <%= @profile.name %></h3>
+          </div>
+          <div class = "showing_total d-flex align-items-center w-50">
+            <div class = "texttotal w-75">
+            <h5><%= book.start_date.strftime("Project starts at: %m/%d/%Y")%></h5>
+            <h5><%=book.end_date.strftime("Project ends at: %m/%d/%Y")%></h5>
+              <%# <h3>Total: £<%= book.profile.day_rate * @days_booked %>
+<%# <%= book %>
 
-<%= @profile_bookings.each do |book| %>
-<%= book %>
 <% end %>
-
+</div>
+</div>
+</div>
+</div>
 </div>
