--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,25 +1,35 @@
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.wrapper {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.content {
+  flex: 1;
+}
+
 .footer {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 100px;
+  height: 50px; /* Smaller height */
   padding: 0px 50px;
-  color: rgba(0,0,0,0.3);
+  color: #80C5BD;
+  font-size: 12px; /* Smaller font size */
 }
+
 .footer-links {
   display: flex;
+  justify-content: space-between;
   align-items: center;
 }
+
 .footer-links a {
-  color: black;
-  opacity: 0.15;
-  text-decoration: none;
-  font-size: 24px;
-  padding: 0px 10px;
-}
-.footer-links a:hover {
-  opacity: 1;
-}
-.footer .fa-heart {
-  color: #D23333;
+  margin: 0 10px;
 }
