--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -18,16 +18,17 @@ html, body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 50px; /* Smaller height */
+  height: 50px;
   padding: 0px 50px;
   color: #80C5BD;
-  font-size: 12px; /* Smaller font size */
+  font-size: 12px;
+  margin-top: 170px;
 }
 
 .footer-links {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: left;
 }
 
 .footer-links a {
